--- a/exercicios/ex023/style.css
+++ b/exercicios/ex023/style.css
@@ -2,7 +2,7 @@
 
 body{
     margin: auto;
-    background-image: url(imagens/pattern003.png);
+    background-image: url(imagens/wallpaper001.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
