--- a/desafios/001/style.css
+++ b/desafios/001/style.css
@@ -31,6 +31,17 @@ body {
     background-color: var(--cor1);
     font-family: var(--font-padrao);
 }
+a.externo::after {
+    content: '\0020\1F517';
+}
+
+strong {
+    background-color: #84e1ac48;
+    color: var(--cor4);
+    font-size: 1em;
+    border-radius: 3px;
+    padding: 3px 5px;
+}
 
 img {
     width: 100%;
@@ -47,7 +58,6 @@ header {
     color: white;
     min-height: 100px;
     text-align: center;
-    width: 100%;
     padding: 10px;
 }
 
@@ -56,30 +66,32 @@ header h1 {
     font-size: 3em;
     font-weight: normal;
     margin: 20px auto;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.495);
 }
 
 header > p {
-    max-width: 600px;
-    padding: 0px 10px 50px;
+    padding: 0px 10px 10px;
     margin: auto;
-
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.498);
 }
 
 nav {
     background-color: var(--cor5);
     padding: 10px;
+    box-shadow: 2px 5px 4px rgba(0, 0, 0, 0.694);
 }
 
 nav > a {
     color: white;
+    font-weight: 700;
     text-decoration: none;
-    transition: .5s;
+    transition: .7s;
     margin: 10px;
+    padding: 10px;
 }
 
 nav > a:hover {
     text-decoration: underline;
-    font-weight: 600;
     color: var(--cor4);
     background-color: var(--cor2);
     padding: 10px;
@@ -88,12 +100,34 @@ nav > a:hover {
 
 main {
     background-color: white;
-    padding: 10px;
     min-width: 300px;
     max-width: 800px;
+    padding: 10px;
+    padding-bottom: 15px;
     margin: auto;
-    width: 100%;
     margin-bottom: 25px;
+    border-radius: 0px 0px 6px 6px;
+    box-shadow: 5px 3px 6px rgba(0, 0, 0, 0.605);
+}
+
+article {
+    padding: 10px;
+}
+
+main h1 {
+    color: var(--cor4);
+    font-family: var(--font-android);
+    margin-bottom: 10px ;
+    font-size: 2.0em;
+    margin-bottom: 5px;
+}
+
+main h2 {
+    background-image: linear-gradient( to right, var(--cor0), transparent);
+    color: var(--cor4);
+    font-family: var(--font-android);
+    text-indent: 10px;
+    margin-bottom: 5px;
 }
 
 main p {
@@ -101,32 +135,32 @@ main p {
     text-indent: 30px;
 }
 
-article {
-    padding: 10px;
+main a {
+    background-color: #84e1ac48;
+    color: var(--cor4);
+    font-size: 1em;
+    font-weight: bold;
+    text-decoration: none;
+    border-radius: 3px;
+    padding: 3px 5px;
 }
 
-article h1 {
-    color: var(--cor4);
-    font-family: var(--font-android);
+section.intro {
+    margin-bottom: 10px;
+}
+
+section.versao {
     margin-bottom: 10px ;
-    font-size: 2.0em;
 }
 
-article h2 {
-    background-image: linear-gradient( to right, var(--cor0), transparent);
-    color: var(--cor4);
-    font-family: var(--font-android);
-    text-indent: 10px;
-}
-
-div.video {
+section.video {
     position: relative;
     background-color: var(--cor5);
     margin: 0px -10px;
     padding: 175px;
 }
 
-div.video > iframe {
+section.video > iframe {
     position: absolute;
     top: 5%;
     left: 5%;
@@ -136,23 +170,34 @@ div.video > iframe {
 
 aside {
     background-color: var(--cor0);
-    padding: 10px;
-    margin-top: 15px;
+    padding: 15px;
+    margin: 15px 10px ;
     border-radius: 8px ;
+    padding-bottom: 10px;
 }
 
 aside h3 {
     background-color: var(--cor3);
     color: white;
     padding: 10px;
-    margin: -10px -10px 10px;
+    margin: -15px -15px 10px;
     border-radius: 8px 8px 0px 0px;
 }
 
 aside ul {
+    padding: 10px;
     list-style-type: '\2714\00A0\0020';
     columns: 2;
     list-style-position: inside;
+}
+
+ul li {
+    font-size: 14px;
+}
+
+aside abbr {
+    text-decoration: none;
+    font-weight: bold;
 }
 
 
@@ -161,7 +206,7 @@ footer {
     color: white;
     text-align: center;
     padding: 10px;
-    width: 100%;
+    margin: auto;
 }
 
 footer > p {
@@ -172,6 +217,10 @@ footer a {
     color: var(--cor0);
     text-decoration: none;
     font-weight: bold;
+}
+
+footer abbr {
+    text-decoration: none;
 }
 
 footer a:hover {
