--- a/desafios/012/style.css
+++ b/desafios/012/style.css
@@ -16,6 +16,7 @@
 
 body{
     background-color: white;
+    font-size: 1.3em;
 }
 
 a  {
@@ -26,6 +27,7 @@ a  {
 
 a:hover{
     text-decoration: underline;
+    color: white;
 }
 
 header{
@@ -35,6 +37,7 @@ header{
 }
 
 h1 {
+    font-variant: small-caps;
     font-family: var(--fonte-titulo);
     font-size: 10vw;
     padding-top: 50px ;
@@ -42,7 +45,6 @@ h1 {
 }
 
 header p {
-    font-size: 1.3em;
     padding-bottom: 50px;
 }
 
@@ -51,38 +53,42 @@ main {
     text-align: left
 }
 
-main section {
-    padding: 50px 20px;
+section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    padding-left: 30px;
 }
 
-main p {
+section p {
     font-family: var(--fonte-texto);
-    font-size: 3.5vw;
+    font-size: 3vw;
     line-height: 2em;
     padding: 5px;
+    padding-bottom: 2em;
 }
 
 main section.imagem {
     color: #ffffff;
+    text-shadow: 1px 1px 0p black;
     position: relative;
-    box-shadow: inset 0px 10px 15px rgba(0, 0, 0, 0.3);
-    padding: 70px 15px;
+    box-shadow: inset 6px 6px 10px 0px rgba(0, 0, 0, 0.68);
 }
 
 section.imagem p {
     display: inline-block;
     background-color: rgba(0, 0, 0, 0.247);
-    font-size: 3.0vw;
+    font-size: 3vw;
+    padding-bottom: 0px;
 }
 
 main section#img01 {
-    background: black url(imagens/background001.jpg) center center no-repeat fixed;
+    background: black url(imagens/background001.jpg) right center no-repeat fixed;
     background-size: cover;
     
 }
 
 main section#img02 {
-    background: black url(imagens/background002.jpg) center center no-repeat fixed;
+    background: black url(imagens/background002.jpg) right center no-repeat fixed;
     background-size: cover;
 }
 
@@ -91,8 +97,4 @@ footer {
     color: white;
     text-align: center;
     padding: 10px;
-}
-
-footer p {
-    font-size: 2vw;
 }
