--- a/desafios/012/style.css
+++ b/desafios/012/style.css
@@ -4,18 +4,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 
 :root {
-    --fonte-titulo: 'Passion One', sans-serif;
-    --fonte-texto: 'Sriracha', sans-serif;
+    --fonte0: Verdana. sans-serif;
+    --fonte1: 'Passion One', sans-serif;
+    --fonte2: 'Sriracha', sans-serif;
 }
 
 * {
-    margin: 0px;
-    font-family:Arial, Helvetica, sans-serif;
+    padding: 0px;
     padding: 0px;
 }
 
 body{
     background-color: white;
+    font-family: var(--fonte0)
     font-size: 1.3em;
 }
 
@@ -38,7 +39,7 @@ header{
 
 h1 {
     font-variant: small-caps;
-    font-family: var(--fonte-titulo);
+    font-family: var(--fonte1);
     font-size: 10vw;
     padding-top: 50px ;
 
@@ -60,7 +61,7 @@ section {
 }
 
 section p {
-    font-family: var(--fonte-texto);
+    font-family: var(--fonte2);
     font-size: 3vw;
     line-height: 2em;
     padding: 5px;
