--- a/desafios/014/estilos/style.css
+++ b/desafios/014/estilos/style.css
@@ -40,7 +40,25 @@ iframe#tela {
     top: 80px;
     left: 22px;
 
-    width: 269px;
+    width: 267px;
     height: 471px;
+}
 
+section#redes {
+    text-align: right;
+}
+
+section#redes img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+    box-sizing: border-box;
+}
+
+section#redes img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.6);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.6);
+    transition: transform .3s, border .5s;
 }
